<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Java2Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="instructions">Select a location</string>
	<string name="directions">Set query options to begin</string>
    <string name="titletext">Weather Feed</string>
    <string name="buttontext">Get Weather</string>
    <string name="apikey">2xhsswmswuh5c65xxnrcdqv4</string>
    <string name="houston">Houston</string>
    <string name="chicago">Chicago</string>
    <string name="miami">Miami</string>
    <string name="seattle">Seattle</string>
    <string name="condition">Condition</string>
    <string name="temp">Temperature</string>
    <string name="humid">Humidity</string>
    <string name="wind">Wind</string>
    <string name="logo">App Logo</string>
    <string name="blank"> </string>
    <string name="current">Current Weather</string>
    <string name="day_field">DAY</string>
    <string name="temp_field">TEMP</string>
    <string name="wind_field">WIND</string>
    <string name="condition_field">COND</string>
    <string name="query_instruct">Select forecast to query</string>
    <string name="queryday1">1st day</string>
    <string name="queryday2">2nd day</string>
    <string name="queryday3">3rd day</string>
    <string name="queryday4">4th day</string>
    <string name="queryday5">5th day</string>
    <string name="queryall">All</string>
    <string name="query_btn">Query Options</string>
    <string name="web_btn">View Weather</string>
    <string name="zip_directions">Enter your five digit zip code for weather updates.</string>
    <string name="zip_hint">Zip Code</string>
    <string name="zip_button">Done</string>
    
</resources>