<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/full_weather_fragment"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/AppBaseTheme"
    >
    
    <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                android:paddingBottom="5dip"
                style="@style/Titles"
                android:background="@android:color/white"
         		android:textAlignment="center"
                />
    
    
    <Button android:id="@+id/querybtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_btn"
        />
    
    <TextView android:id="@+id/weatherheader" 
            	android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current"
                android:paddingBottom="5dip"
                style="@style/Titles"
                />
    
    <TableLayout android:id="@+id/current_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TableStyle"
        >
        
        <TableRow>
            <TextView
                android:text="@string/condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CurrentConditions"
                />
        </TableRow>
        
        <TableRow>
            <ImageView android:id="@+id/condition_image" 
                android:contentDescription="@string/logo"
                style="@style/ImageStyle"/>
            
            <TextView android:id="@+id/current_cond"
                android:text="@string/blank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />    
        </TableRow>
        
        <TableRow>
            <TextView
                android:text="@string/temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="120dip"
                style="@style/CurrentConditions"
                />
            
            <TextView
                android:text="@string/humid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="120dip"
                style="@style/CurrentConditions"
                />
            
            <TextView
                android:text="@string/wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="120dip"
                style="@style/CurrentConditions"
                />
            
        </TableRow>
        
        <TableRow>
            <TextView android:id="@+id/current_temp"
                android:text="@string/blank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            
            <TextView android:id="@+id/current_humid"
                android:text="@string/blank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            
            <TextView android:id="@+id/current_wind"
                android:text="@string/blank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                />
            
        </TableRow>
        
    </TableLayout>
        
        <TextView android:id="@+id/forcastheader" 
            	android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                style="@style/Titles"
                />
        
        <TableLayout android:id="@+id/forecast_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TableStyle"
            >
            
            <TableRow>
            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="64dip"
                android:text="@string/day_field"
                style="@style/WeatherTitles"
                />
       
             <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="64dip"
                android:text="@string/temp_field"
                style="@style/WeatherTitles"
                />
             
              <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="64dip"
                android:text="@string/wind_field"
                style="@style/WeatherTitles"
                />
            
               <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="64dip"
                android:text="@string/condition_field"
                style="@style/WeatherTitles"
                />
               </TableRow>
               
            <TableRow 
                android:layout_height="wrap_content"
                android:id="@+id/cell_day1">
            </TableRow>  
            
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/cell_day2">
            </TableRow>
            
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/cell_day3">
            </TableRow>
            
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/cell_day4">
            </TableRow>
            
            <TableRow
                android:layout_height="wrap_content"
                android:id="@+id/cell_day5">
            </TableRow>
              
        </TableLayout>
    
</LinearLayout>
</ScrollView>