<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zip_directions"
        />
    
    <EditText android:id="@+id/zip_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zip_hint"
        android:textColor="@android:color/white"
        android:inputType="number"
        android:maxLength="5"
        />
    
    <Button android:id="@+id/zip_accept" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zip_button"
        />

</LinearLayout>
